--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <aside class="mdc-drawer material-lessons-drawer">
     <div class="mdc-drawer__content">
       <nav class="mdc-list">
-        <a class="mdc-list-item mdc-list-item--selected" href="/" role="option" aria-selected="true" tabindex="0">
+        <a  href="/"class="mdc-list-item mdc-list-item--selected" role="option" aria-selected="true" tabindex="0">
           <span class="mdc-list-item__text">Zero Waste Academy</span>
         </a>
         <hr class="mdc-list-divider">
@@ -27,7 +27,7 @@
         <a href="#teaching.html" class="mdc-list-item" role="option">
           <span class="mdc-list-item__text">Навчання</span>
         </a>
-        <a href="#certificate.html" class="mdc-list-item" role="option">
+        <a href="certificate.html" class="mdc-list-item" role="option">
           <span class="mdc-list-item__text">Сертифікат</span>
         </a>
       </nav>
@@ -60,7 +60,7 @@
           <a class="mdc-list-item" role="option" href="#teaching.html">
             <span class="mdc-list-item__text">Навчання</span>
           </a>
-          <a class="mdc-list-item" role="option" href="#certificate.html">
+          <a class="mdc-list-item" role="option" href="certificate.html">
             <span class="mdc-list-item__text">Сертифікат</span>
           </a>
         </nav>
