--- a/certificate.html
+++ b/certificate.html
@@ -7,83 +7,70 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="bundle.css">
-  <!-- Add favicons
-    <link rel="icon" type="image/png" sizes="32x32" href="https://cdn.glitch.com/9c389208-b279-4e96-bcbc-e5f8712d8706%2Ffavicon-32x32.png?1553712190412">
-    <link rel="icon" type="image/png" sizes="96x96" href="https://cdn.glitch.com/9c389208-b279-4e96-bcbc-e5f8712d8706%2Ffavicon-96x96.png?1553712190613">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://cdn.glitch.com/9c389208-b279-4e96-bcbc-e5f8712d8706%2Ffavicon-16x16.png?1553712190383">
-  -->
+  <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
 </head>
 
 <body class="mdc-typography language-css media-template">
   <aside class="mdc-drawer material-lessons-drawer">
     <div class="mdc-drawer__content">
-      <div class="mdc-drawer__header">
-        Zero Waste Academy
-      </div>
-      <hr class="mdc-list-divider">
       <nav class="mdc-list">
-        <a href="team.html" class="mdc-list-item" role="option">
+        <a href="/" class="mdc-list-item" role="option">
+          <span class="mdc-list-item__text">Zero Waste Academy</span>
+        </a>
+        <hr class="mdc-list-divider">
+        <a href="#team.html" class="mdc-list-item" role="option">
           <span class="mdc-list-item__text">Команда</span>
         </a>
-        <a href="history-and-results.html" class="mdc-list-item" role="option">
+        <a href="#history-and-results.html" class="mdc-list-item" role="option">
           <span class="mdc-list-item__text">Історія та результати</span>
         </a>
-        <a href="teaching.html" class="mdc-list-item" role="option">
+        <a href="#teaching.html" class="mdc-list-item" role="option">
           <span class="mdc-list-item__text">Навчання</span>
         </a>
         <a href="certificate.html" class="mdc-list-item mdc-list-item--selected" role="option" aria-selected="true"
           tabindex="0">
           <span class="mdc-list-item__text">Сертифікат</span>
         </a>
-        <div class="nav-footer">
-          <hr class="mdc-list-divider">
-          <div class="footer-button-wrapper">
-            <a class="mdc-button mdc-button--dense footer-mdc-button" href="/" role="option">
-              <span class="mdc-button__label">Про проєкт</span>
-            </a>
-          </div>
-        </div>
       </nav>
-
     </div>
   </aside>
-
   <div class="mdc-drawer-scrim"></div>
   <div class="mdc-drawer-app-content">
     <header
       class="material-lessons-top-app-bar mdc-top-app-bar mdc-top-app-bar--short mdc-top-app-bar--short-collapsed">
-      <div class="mdc-top-app-bar__row">
-        <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
-          <a class="material-icons mdc-top-app-bar__navigation-icon">menu</a>
-        </section>
-      </div>
+      <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
+        <a class="material-icons mdc-top-app-bar__navigation-icon">menu</a>
+      </section>
     </header>
     <header class="mdc-top-app-bar media-top-app-bar">
-      <div class="mdc-top-app-bar__row">
-        <section class="media-menu-section mdc-top-app-bar__section">
-          <a href="#" class="demo-menu material-icons mdc-top-app-bar__navigation-icon">menu</a>
-          <span class="mdc-list-item__text mdc-typography--overline">Overline Header</span>
-        </section>
-      </div>
+      <section class="media-menu-section mdc-top-app-bar__section">
+        <a href="#" class="material-icons mdc-top-app-bar__navigation-icon">menu</a>
+      </section>
       <section class="mdc-top-app-bar__section contained-section header-section">
-        <h1 class="mdc-typography--headline5 page-title">Header</h1>
-        <div class="topic-section">
-          <p class="mdc-typography--caption topic-label">Trending: </p>
-          <ul class="topics">
-            <li class="topic"><a href="#" class="mdc-typography--body2">Lifestyle</a></li>
-            <li class="topic"><a href="#" class="mdc-typography--body2">Food</a></li>
-            <li class="topic"><a href="#" class="mdc-typography--body2">Television</a></li>
-            <li class="topic"><a href="#" class="mdc-typography--body2">Travel</a></li>
-            <li class="topic"><a href="#" class="mdc-typography--body2">Animals</a></li>
-            <li class="topic"><a href="#" class="mdc-typography--body2">Design</a></li>
-          </ul>
-        </div>
+        <nav class="mdc-list">
+          <a class="mdc-list-item" role="option" href="/">
+            <img src="assets/logo.png" alt="Zero Waste Academy" class="logo">
+          </a>
+          <hr class="mdc-list-divider">
+          <a class="mdc-list-item" role="option" href="#team.html">
+            <span class="mdc-list-item__text">Команда</span>
+          </a>
+          <a class="mdc-list-item" role="option" href="#history-and-results.html">
+            <span class="mdc-list-item__text">Історія та результати</span>
+          </a>
+          <a class="mdc-list-item" role="option" href="#teaching.html">
+            <span class="mdc-list-item__text">Навчання</span>
+          </a>
+          <a class="mdc-list-item mdc-list-item--selected" role="option"  aria-selected="true" href="certificate.html">
+            <span class="mdc-list-item__text">Сертифікат</span>
+          </a>
+        </nav>
       </section>
     </header>
 
     <div class="mdc-top-app-bar--fixed-adjust">
       <main class="main-content article">
-        <section class="article-header">
+        <!-- <section class="article-header">
           <p class="article-meta">
             <span class="mdc-typography--overline">Category</span>
             <span class="mdc-typography--overline">4 Days Ago</span>
@@ -92,13 +79,10 @@
           <p class="mdc-typography--body1 article-preview">Just then she heard something splashing about in the pool a
             little way off, and she swam nearer to make out what it was at first.</p>
           <a class="author-meta" href="#">
-            <img
-              src="https://cdn.glitch.com/17f6eaf0-3413-4607-9190-d8da5f737643%2Fstock-photo-austin-travis-heights-by-exitflag-146133507.jpg?v=1561412023433"
-              alt="" class="author-image">
+            <img src="https://via.placeholder.com/200x75.png?text=Zero%20Waste%0AAcademy" alt="" class="author-image">
             <p class="mdc-typography--body1 author">Betty Eghan</p>
           </a>
-          <img src="https://cdn.glitch.com/17f6eaf0-3413-4607-9190-d8da5f737643%2Fbird.jpg?1559206409087" class="hero"
-            alt="">
+          <img src="https://via.placeholder.com/200x75.png?text=Zero%20Waste%0AAcademy" class="hero" alt="">
           <p class="mdc-typography--body2 hero-caption">In another moment Alice was through the glass, and had jumped
             lightly down into the Looking-glass room. The very first thing she did was to look whether there was a fire
             in the fireplace.</p>
@@ -134,61 +118,69 @@
             afterwards), and she was not even surprised to hear music playing: it seemed to come from the tree under
             which they were dancing, and it was done (as well as she could make it out) by the branches rubbing one
             across the other, like fiddles and fiddle-sticks.</p>
-        </section>
-
-
-        Що таке Zero Waste Academy - це унікальний навчально-практичний курс про принципи керування відходами (ТПВ)
-        відповідно до принципів zerо waste та циркулярної економіки.
-
-        Мета проєкту - надати достатню кількість знань та навичок для фахівців у сфері відходів, керуючих ОСББ, ОСМ,
-        представників ОМС, екологічних ГО, активістів для успішної реалізації сучасних екологічних проєктів,
-        зміни/адаптації стратегії, планів дій, розробки нових програм з поводження з ТПВ на місцевому рівні.
-
-
-        Завдання:
-        підготувати для українського ринку кваліфікованих та озброєних передовими знаннями фахівців/фахівчинь;
-        впровадити чи допомогти впровадженню якомога більшої кількості zero waste проєктів та стартапів в Україні;
-        зменшити кількість відходів на полігонах;
-        надати максимальну кількість фактів та аргументів для того, щоб кожен/на слухач/ка переконалася, що запобігання
-        та ієрархія у сфері відходів
-        допомогти громадам України у процесі перетворення на туристичні привабливі та чисті.
-
-
-        Переваги
-        Наші переваги засвідчать наші випускники та випускниці:
-        системний підхід формує картину світу, а не фрагментарні уявлення, які згодом забудуться;
-        мультидисциплінарність - ми надаємо знання та навички не тільки з теми керування відходами, а також формуємо у
-        Вас самодостатнього та універсального менеджера/ку: ви розумієтеся у проєктному менеджменті, у комунікаційний та
-        адвокаційний кампаніях, у джерелах фінансування та фандрейзингу. Навіть якщо ці завдання у команді виконуєте не
-        ви, то ви можете оцінити пропозиції ваших партнерів, співробітників та витрачати кошти на те, що працює.
-        ціннісний підхід до справи - наші знання формують послідовників/ць концепції zero waste: ви вірите у те, що
-        робите, як і навіщо трансформувати свою реальність;
-        коучингова підтримка - у тому випадку, коли “лупаєте скалу”, працюєте над зміностворенням, важливо знати та
-        вміти раціонально використовувати свої ресурси. Ваші приховані можливості, віру у себе для роботи на рівні
-        громади допоможе розкрити наші коучі, які спеціалізуються з теми громадянського суспільства та інновацій.
-
-        Історія (гіперпосилання на успішні історії)
-        За 2020-2021 роки ми випустили 3 курси, а це близько 100 випускників та випускниць. Курс Zero Waste Academy
-        орієнтований на нефахівців.
-        Курс Zero Waste Academy deep level розрахований на фахівців/чинь, представників ОМС, експертів у сфері керування
-        відходами.
-
-
-        Тематика курсів, які знання отримає слухач
-
-        Законодавство
-        Проєктний менеджмент
-        Технології утилізації
-        Циркулярна економіка
-        Кейси
-
-        Реєстрація
-
-        Тест “Хочеш перевірити знання?”
-
-        Контакти:
-
-
+        </section> -->
+        <p>
+          Що таке Zero Waste Academy - це унікальний навчально-практичний курс про принципи керування відходами (ТПВ)
+          відповідно до принципів zerо waste та циркулярної економіки.
+        </p>
+        <p>
+          Мета проєкту - надати достатню кількість знань та навичок для фахівців у сфері відходів, керуючих ОСББ, ОСМ,
+          представників ОМС, екологічних ГО, активістів для успішної реалізації сучасних екологічних проєктів,
+          зміни/адаптації стратегії, планів дій, розробки нових програм з поводження з ТПВ на місцевому рівні.
+        </p>
+        <p>
+          Завдання:
+          підготувати для українського ринку кваліфікованих та озброєних передовими знаннями фахівців/фахівчинь;
+          впровадити чи допомогти впровадженню якомога більшої кількості zero waste проєктів та стартапів в Україні;
+          зменшити кількість відходів на полігонах;
+          надати максимальну кількість фактів та аргументів для того, щоб кожен/на слухач/ка переконалася, що
+          запобігання
+          та ієрархія у сфері відходів
+          допомогти громадам України у процесі перетворення на туристичні привабливі та чисті.
+        </p>
+        <p>
+          Переваги
+          Наші переваги засвідчать наші випускники та випускниці:
+          системний підхід формує картину світу, а не фрагментарні уявлення, які згодом забудуться;
+          мультидисциплінарність - ми надаємо знання та навички не тільки з теми керування відходами, а також формуємо у
+          Вас самодостатнього та універсального менеджера/ку: ви розумієтеся у проєктному менеджменті, у комунікаційний
+          та
+          адвокаційний кампаніях, у джерелах фінансування та фандрейзингу. Навіть якщо ці завдання у команді виконуєте
+          не
+          ви, то ви можете оцінити пропозиції ваших партнерів, співробітників та витрачати кошти на те, що працює.
+          ціннісний підхід до справи - наші знання формують послідовників/ць концепції zero waste: ви вірите у те, що
+          робите, як і навіщо трансформувати свою реальність;
+          коучингова підтримка - у тому випадку, коли “лупаєте скалу”, працюєте над зміностворенням, важливо знати та
+          вміти раціонально використовувати свої ресурси. Ваші приховані можливості, віру у себе для роботи на рівні
+          громади допоможе розкрити наші коучі, які спеціалізуються з теми громадянського суспільства та інновацій.
+        </p>
+        <p>
+          Історія (гіперпосилання на успішні історії)
+          За 2020-2021 роки ми випустили 3 курси, а це близько 100 випускників та випускниць. Курс Zero Waste Academy
+          орієнтований на нефахівців.
+          Курс Zero Waste Academy deep level розрахований на фахівців/чинь, представників ОМС, експертів у сфері
+          керування
+          відходами.
+        </p>
+        <p>
+          Тематика курсів, які знання отримає слухач
+        </p>
+        <p>
+          Законодавство
+          Проєктний менеджмент
+          Технології утилізації
+          Циркулярна економіка
+          Кейси
+        </p>
+        <p>
+          Реєстрація
+        </p>
+        <p>
+          Тест “Хочеш перевірити знання?”
+        </p>
+        <p>
+          Контакти:
+        </p>
       </main>
     </div>
   </div>
