fix header menu position

--- a/index.html
+++ b/index.html
@@ -47,10 +47,9 @@
       </section>
       <section class="mdc-top-app-bar__section contained-section header-section">
         <nav class="mdc-list">
-          <a class="mdc-list-item" role="option" href="/">
-            <img src="assets/logo.png" alt="Zero Waste Academy" class="logo">
+          <a class="mdc-list-item logo" role="option" href="/">
+            <img src="assets/logo.png" alt="Zero Waste Academy">
           </a>
-          <hr class="mdc-list-divider">
           <a class="mdc-list-item" role="option" href="#team.html">
             <span class="mdc-list-item__text">Команда</span>
           </a>
