--- a/index.html
+++ b/index.html
@@ -105,37 +105,41 @@
           <li>впровадити чи допомогти впровадженню якомога більшої кількості zero waste проєктів та стартапів в Україні
           </li>
           <li>зменшити кількість відходів на полігонах</li>
-          <li>надати максимальну кількість фактів та аргументів для того, щоб кожен/на слухач/ка переконалася, що
+        </ol>
+        <ol start="4">
+          <li>надати максимальну кількість фактів та аргументів для того, щоб кожен/на слухач/ка
+            переконалася, що
             запобігання появі відходів та ієрархія у сфері відходів є єдино вірними рішеннями у керуванні ТПВ у
             сучасному
             світі</li>
-          <li>допомогти громадам України у процесі перетворення на туристичні привабливі та чисті</li>
+          <li>допомогти громадам України у процесі перетворення на туристичні привабливі та чисті
+          </li>
         </ol>
       </div>
     </div>
     <div>
       <div class="benefits article">
         <h2 class="mdc-typography--headline2">Переваги</h2>
-        <h3>Системний підхід</h3>
+        <h3 class="mdc-typography--headline3">Системний підхід</h3>
         <p>формує цілісні знання у сфері поводження з ТПВ відповідно до циркулярної економіки, новий погляд та рішення у
           сфері відходів, а не фрагментарні уявлення, які згодом забудуться</p>
-        <h3>Мультидисциплінарність</h3>
+        <h3 class="mdc-typography--headline3">Мультидисциплінарність</h3>
         <p>ми надаємо знання та навички не тільки з керування відходами, а також формуємо у Вас навички самодостатнього
           та
           універсального менеджера/ки: що таке проєктноний менеджмент, вмієте організовувати, оцінвати комунікаційні та
           адвокаційні кампанії, знаєте де та як залучати ресурси у проєкт. Навіть якщо ці завдання у команді виконуєте
           не
           ви, то ви можете оцінити пропозиції ваших партнерів, співробітників та успішно керувати проєктом</p>
-        <h3>Ціннісний підхід до справи</h3>
+        <h3 class="mdc-typography--headline3">Ціннісний підхід до справи</h3>
         <p>наші знання формують послідовників/ць концепції zero waste: ви вірите у те, що робите, як і навіщо
           трансформувати свою реальність - ви переконаєтеся, що zero waste & circular economy "на часі", зрозумієте,
           чому
           важливо говорити про ваші ідеї та навіщо трансформувати свою реальність</p>
-        <h3>Коучингова підтримка</h3>
+        <h3 class="mdc-typography--headline3">Коучингова підтримка</h3>
         <p>знання та вміння раціонально використовувати внутрішні ресурси дозволять працювати над змінотворенням
           ефективніше. Ваші приховані можливості, віру у себе для роботи на рівні громади допоможе розкрити наші коучі,
           які спеціалізуються з теми громадянського суспільства та інновацій</p>
-        <a href="#">Проєкти наших випускників - найкращий доказ переваг навчання</a>
+        <a class="link" href="#">Проєкти наших випускників - найкращий доказ переваг навчання</a>
       </div>
     </div>
     <div class="odd">
@@ -143,17 +147,17 @@
         <h2 class="mdc-typography--headline2">Історія</h2>
         <p class="resume">За 2020-2021 роки ми провели 3 курси та випустили більше 100 випускників та випускниць</p>
         <label>
-          <a class="mdc-button" href="#">
+          <a class="mdc-button mdc-button--outlined" href="#">
             <span class="mdc-button__label">Читати...</span>
           </a>
-          Курс Zero Waste Academy орієнтований на нефахівців/чинь
+          <span>Курс Zero Waste Academy орієнтований на нефахівців/чинь</span>
         </label>
         <label>
-          <a class="mdc-button" href="#">
+          <a class="mdc-button mdc-button--outlined" href="#">
             <span class="mdc-button__label">Читати...</span>
           </a>
-          Курс Zero Waste Academy deep level розрахований на фахівців/чинь, представників/ниць ОМС, керуючих ОСББ,
-          експертів/ок у сфері поводження з відходами
+          <span>Курс Zero Waste Academy deep level розрахований на фахівців/чинь, представників/ниць ОМС, керуючих ОСББ,
+            експертів/ок у сфері поводження з відходами</span>
         </label>
       </div>
     </div>
@@ -222,12 +226,8 @@
     </div>
     <div class="odd">
       <div class="checks article">
-        <h2 class="mdc-typography--headline2">Перевір свої знання у сфері Zero waste та приєднуйся до Zero waste academy
-        </h2>
-        <a class="mdc-button" href="#">
-          <span class="mdc-button__label">Зареєструватися на курс</span>
-        </a>
-        <a class="mdc-button" href="#">
+        <h2 class="mdc-typography--headline2">Перевір свої знання у сфері Zero waste</h2>
+        <a class="mdc-button mdc-button--outlined" href="#">
           <span class="mdc-button__label">Пройти тест</span>
         </a>
       </div>
@@ -235,7 +235,7 @@
     <div>
       <div class="join article">
         <h2 class="mdc-typography--headline2">приєднатися до Zero waste academy</h2>
-        <a class="mdc-button" href="#">
+        <a class="mdc-button mdc-button--raised" href="#">
           <span class="mdc-button__label">Зареєструватися на курс</span>
         </a>
       </div>
@@ -307,13 +307,13 @@
             </a>
           </li>
           <li>
-            <a class="" href="https://www.facebook.com/kharkivzerowaste">
+            <a class="imglink" href="https://www.facebook.com/kharkivzerowaste">
               <img src="assets/facebook.svg" alt="facebook">
             </a>
-            <a class="" href="https://www.instagram.com/kharkiv_zero_waste/">
+            <a class="imglink" href="https://www.instagram.com/kharkiv_zero_waste/">
               <img src="assets/instagram.svg" alt="instagram">
             </a>
-            <a class="" href="#">
+            <a class="imglink" href="#">
               <img src="assets/youtube.svg" alt="youtube">
             </a>
           </li>
